crates/aether-actor-derive/tests/ui/rejects_stray_const_ffi.stderr
error: #[actor] impl WasmActor for X accepts only `const NAMESPACE: &'static str = …` — the `Addressable` super-trait carries no other authorable const
  --> tests/ui/rejects_stray_const_ffi.rs:28:5
   |
28 |     const BUFFER_CAPACITY: usize = 64;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
